Closed Bug 1083245 Opened 11 years ago Closed 11 years ago

Mix-blend-mode doesn't have any effect on elements with transform: translateZ

Categories

(Core :: Layout, defect)

35 Branch
x86_64
Windows 8.1
defect
Not set
normal

Tracking

()

VERIFIED FIXED
mozilla38
Tracking Status
firefox34 --- unaffected
firefox35 --- unaffected
firefox36 + verified
firefox37 + verified
firefox38 --- verified

People

(Reporter: rosca, Assigned: bas.schouten)

References

()

Details

(Keywords: regression)

Attachments

(2 files)

User Agent: Mozilla/5.0 (Windows NT 6.3; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/37.0.2062.124 Safari/537.36 Steps to reproduce: Open http://codepen.io/rosca/full/chEmL Check Blending Check Rotate Z Actual results: Clicking the Rotate Z check box deactivated blending on elements. Expected results: The elements should be rotated without affecting blending.
Assignee: nobody → cabanier
It works with HWA disabled, surely issue about Direct2D 1.1. Regression range: good=2014-10-01 bad=2014-10-02 http://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=14665b1de5ee&tochange=2399d1ae89e9
Blocks: 902952
Status: UNCONFIRMED → NEW
Component: Untriaged → Layout
Ever confirmed: true
Keywords: regression
Product: Firefox → Core
Version: 36 Branch → 35 Branch
I'm unable to reproduce this on mac and windows with latest released FF. ion, can you verify that filters are turned off?
Flags: needinfo?(rosca)
Rik, I cannot reproduce it with latest released FF either. The problem seems to be a Windows only issue on FF 36 (nightly). The filters are turned off, only blending and rotate Z are enabled.
Flags: needinfo?(rosca)
Attached video screencast-1083245.mp4
Screencast on Win 7 with FF36
Looking for QA to verify before tracking.
Keywords: qawanted
Hey Kairo, can you take a look at this and see if you can verify? Getting close to Beta and would be good to know if we need to chase down a regression here.
Flags: needinfo?(kairo)
(In reply to Lukas Blakk [:lsblakk] use ?needinfo from comment #6) > Hey Kairo, can you take a look at this and see if you can verify? Getting > close to Beta and would be good to know if we need to chase down a > regression here. I don't understand. We already have multiple people seeing it here, and narrowed down a regression range and potential cause in comment #1. From that, it can clearly be followed that it would only be seen on systems that even have D2D 1.1 available and enabled, which is a pretty clear case. That said, I'm not sure if I even would have any such system available to verify myself.
Flags: needinfo?(kairo)
It seems that blending in D2D stops working when we have a 3d layers. Bas, should we switch to the shader approach for this case?
Flags: needinfo?(bas)
untracking for 35 since we've disabled D2d1.1 in bug 1095608
I've verified the issue. I'm unsure why this is D2D 1.1 only, but I will have a look.
Assignee: cabanier → bas
Flags: needinfo?(bas)
I've rootcaused this problem to the rotation causing a non-rectangular clip, this causes a layer to be pushed, which subsequently causes the blend to occur with the empty pixels of the pushed layer, rather than those of the background.
Attachment #8558540 - Flags: review?(jmuizelaar) → review+
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla38
Bas, how common would this be, is there any reason to consider uplifting it, would you anticipate any possible performance regressions from it?
Flags: needinfo?(bas)
(In reply to Milan Sreckovic [:milan] from comment #14) > Bas, how common would this be, is there any reason to consider uplifting it, > would you anticipate any possible performance regressions from it? Not really on sites where we care. I'd definitely suggest an uplift to aurora. I'd be fine with beta as well, but at the same time I don't think the bug is that critical.
Flags: needinfo?(bas)
Given that this is a regression in 36, it would be nice to fix this in 36 to avoid shipping the regression. In any case, I think we should take this on Aurora this week. Can you please submit an uplift request?
Flags: needinfo?(bas)
Comment on attachment 8558540 [details] [diff] [review] Pop clips before copying to the destination blending surface Approval Request Comment [Feature/regressing bug #]: D2D1.1 [User impact if declined]: We ship 36 with this regression. Blending while transforming can give us visual artifacts. [Describe test coverage new/current, TreeHerder]: [Risks and why]: [String/UUID change made/needed]:
Flags: needinfo?(bas)
Attachment #8558540 - Flags: approval-mozilla-beta?
Attachment #8558540 - Flags: approval-mozilla-aurora?
Attachment #8558540 - Flags: approval-mozilla-beta?
Attachment #8558540 - Flags: approval-mozilla-beta+
Attachment #8558540 - Flags: approval-mozilla-aurora?
Attachment #8558540 - Flags: approval-mozilla-aurora+
Flags: qe-verify+
Verified as fixed using: FF 36.0b9 Build Id: 20150212154903 Os: Win 8.1 x86
Verified as fixed using FF 37.0b3 Build Id:20150305191659 OS: Win 7 x64
Status: RESOLVED → VERIFIED
Verified as fixed suing: FF 38 BUild Id:20150309004203 OS: Win 7 x64
Per Comment 5,Comment 20 & 21 & 22,clear "qawanted" keywords.
Keywords: qawanted
Depends on: 1175145
No longer depends on: 1175145
Regressions: 1175145
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: